<resources>
    <string name="app_name" translatable="false">Stop me</string>
    <string name="copyright" translatable="false">©2018 &#8211; 2019 GuepardoApps (Jonas Schubert)</string>
    
    <string name="time">Times:</string>
    <string name="timeValues">values for time</string>
    <string name="clear">Clear</string>
    <string name="round">Round</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="dummyTime" translatable="false">00</string>
    <string name="separator" translatable="false">:</string>
    <string name="close" translatable="false">X</string>
    <string name="set_bubble_state">Activate floating stopwatch</string>
    <string name="share_using">Share using</string>

    <string name="contentDescription">This is an image</string>

    <string name="about">About</string>
    <string name="author_title">Author</string>
    <string name="author" translatable="false">Jonas Schubert\nGuepardoApps</string>
    <string name="version_title">Version</string>
    <string name="version" translatable="false">2.0.1.190810</string>
    <string name="email_title">Mail</string>
    <string name="email" translatable="false">guepardoapps@gmail.com</string>
    <string name="gitHubLink_title" translatable="false">GitHub</string>
    <string name="gitHubLink" translatable="false">https://github.com/GuepardoApps-Releases/StopMe/</string>
    <string name="homepageLink_title" translatable="false">Homepage</string>
    <string name="homepageLink" translatable="false">https://guepardoapps.github.io/</string>
    <string name="special_thanks_title" translatable="false">Special thanks</string>
    <string name="special_thanks" translatable="false">I want to thank my lovely wife for always supporting me and helping me to improve this application! நான் உன்னை காதலிக்கிறேன்</string>
</resources>
