<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    android:padding="10dp">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btnSettings"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@+id/btnSettings"
                android:contentDescription="@string/contentDescription"
                app:fab_iconSize="30dp"
                app:fab_iconSrc="@android:drawable/ic_dialog_info"
                app:fab_radius="17dp"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimary"
                app:rd_rippleType="touch" />

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btnClose"
                android:layout_toStartOf="@+id/btnClose"
                android:contentDescription="@string/contentDescription"
                app:fab_iconSize="30dp"
                app:fab_iconSrc="@android:drawable/ic_menu_manage"
                app:fab_radius="17dp"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimary"
                app:rd_rippleType="touch" />

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:contentDescription="@string/contentDescription"
                app:fab_iconSize="30dp"
                app:fab_iconSrc="@android:drawable/ic_menu_close_clear_cancel"
                app:fab_radius="17dp"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimary"
                app:rd_rippleType="touch" />

            <TextView
                android:id="@+id/textTimerMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnClose"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_toStartOf="@+id/split1"
                android:text="@string/dummyTime"
                android:textColor="@color/PrimaryText"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/split1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textTimerSec"
                android:layout_alignBottom="@+id/textTimerSec"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_toStartOf="@+id/textTimerSec"
                android:text="@string/separator"
                android:textColor="@color/PrimaryText"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textTimerSec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnClose"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/dummyTime"
                android:textColor="@color/PrimaryText"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/split2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textTimerSec"
                android:layout_alignBottom="@+id/textTimerSec"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/textTimerSec"
                android:text="@string/separator"
                android:textColor="@color/PrimaryText"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textTimerMSec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnClose"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/split2"
                android:text="@string/dummyTime"
                android:textColor="@color/PrimaryText"
                android:textSize="40sp" />

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_above="@+id/btnClear"
                android:layout_below="@+id/textTimerMin"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/timeValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/White"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/PrimaryText" />
            </ScrollView>

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnRound"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:contentDescription="@string/contentDescription"
                android:gravity="center_horizontal|center_vertical"
                android:visibility="invisible"
                app:fab_iconSize="30dp"
                app:fab_iconSrc="@mipmap/leererpapierkorb"
                app:fab_radius="17dp"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimary"
                app:rd_rippleType="touch" />

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnRound"
                android:layout_margin="5dp"
                android:layout_toStartOf="@+id/btnClear"
                android:contentDescription="@string/contentDescription"
                android:gravity="center_horizontal|center_vertical"
                app:fab_iconSize="30dp"
                app:fab_iconSrc="@mipmap/mail"
                app:fab_radius="17dp"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimary"
                app:rd_rippleType="touch" />

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/adView"
                android:layout_marginBottom="10dp"
                android:layout_toStartOf="@+id/btnRound"
                android:contentDescription="@string/contentDescription"
                android:gravity="center_horizontal|center_vertical"
                app:fab_iconSize="30dp"
                app:fab_iconSrc="@mipmap/spielen"
                app:fab_radius="25dp"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimary"
                app:rd_rippleType="touch" />

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnRound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/adView"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/contentDescription"
                android:gravity="center_horizontal|center_vertical"
                app:fab_iconSize="30dp"
                app:fab_iconSrc="@mipmap/neustart"
                app:fab_radius="25dp"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimary"
                app:rd_rippleType="touch" />

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/adView"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/btnRound"
                android:contentDescription="@string/contentDescription"
                android:gravity="center_horizontal|center_vertical"
                app:fab_iconSize="30dp"
                app:fab_iconSrc="@mipmap/stop"
                app:fab_radius="25dp"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimary"
                app:rd_rippleType="touch" />

            <LinearLayout
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:orientation="vertical" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>